--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -70,80 +70,6 @@
                             app:sriv_border_width="2dp"
                             app:sriv_oval="true" />
 
-                        <!--<LinearLayout-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="match_parent"-->
-                        <!--android:orientation="vertical">-->
-
-                        <!--<TextView-->
-                        <!--android:id="@+id/xumb"-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:layout_marginLeft="@dimen/bottom_ellipsis_height"-->
-                        <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
-                        <!--android:textColor="@color/colorAccent" />-->
-
-                        <!--&lt;!&ndash;<TextView&ndash;&gt;-->
-                        <!--&lt;!&ndash;android:id="@+id/orer"&ndash;&gt;-->
-                        <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
-                        <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
-                        <!--&lt;!&ndash;android:layout_marginLeft="@dimen/bottom_ellipsis_height"&ndash;&gt;-->
-                        <!--&lt;!&ndash;android:layout_marginTop="@dimen/default_padding_top"&ndash;&gt;-->
-                        <!--&lt;!&ndash;android:text="or" />&ndash;&gt;-->
-
-                        <!--<TextView-->
-                        <!--android:id="@+id/xumbAnd"-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:layout_marginLeft="@dimen/bottom_ellipsis_height"-->
-                        <!--android:layout_marginTop="@dimen/default_padding_top"-->
-                        <!--android:text="ցուցակ" />-->
-
-                        <!--<TextView-->
-                        <!--android:id="@+id/textView29"-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:layout_marginLeft="@dimen/bottom_ellipsis_height"-->
-                        <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
-                        <!--android:text="Դասացուցակ"-->
-                        <!--android:textColor="@android:color/background_dark"-->
-                        <!--android:textStyle="bold" />-->
-
-                        <!--<ListView-->
-                        <!--android:id="@+id/lists"-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="138dp" />-->
-
-                        <!--<TextView-->
-                        <!--android:id="@+id/textView32"-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:layout_marginLeft="@dimen/bottom_ellipsis_height"-->
-                        <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
-                        <!--android:text="Դասավանդող"-->
-                        <!--android:textColor="@android:color/background_dark"-->
-                        <!--android:textStyle="bold" />-->
-
-                        <!--<com.joooonho.SelectableRoundedImageView-->
-                        <!--android:id="@+id/teacherImage"-->
-                        <!--android:layout_width="47dp"-->
-                        <!--android:layout_height="47dp"-->
-                        <!--android:layout_gravity="center"-->
-                        <!--android:layout_marginLeft="-20dp"-->
-                        <!--android:scaleType="centerCrop"-->
-                        <!--app:sriv_border_color="#8bc34a"-->
-                        <!--app:sriv_border_width="2dp"-->
-                        <!--app:sriv_oval="true" />-->
-
-                        <!--<TextView-->
-                        <!--android:id="@+id/teacherNandS"-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:layout_marginLeft="@dimen/bottom_ellipsis_height"-->
-                        <!--android:layout_marginTop="@dimen/inner_components_spacing" />-->
-
-                        <!--</LinearLayout>-->
-
                     </LinearLayout>
 
                     <LinearLayout
@@ -191,6 +117,11 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
@@ -205,29 +136,29 @@
                             android:layout_height="match_parent"
                             android:orientation="vertical">
 
-                            <TextView
-                                android:id="@+id/xumb"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="@dimen/bottom_ellipsis_height"
-                                android:layout_marginTop="@dimen/activity_vertical_margin"
-                                android:textColor="@color/colorAccent" />
+                            <!--<TextView-->
+                                <!--android:id="@+id/xumb"-->
+                                <!--android:layout_width="match_parent"-->
+                                <!--android:layout_height="wrap_content"-->
+                                <!--android:layout_marginLeft="@dimen/bottom_ellipsis_height"-->
+                                <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
+                                <!--android:textColor="@color/colorAccent" />-->
+
+                            <!--&lt;!&ndash;<TextView&ndash;&gt;-->
+                            <!--&lt;!&ndash;android:id="@+id/orer"&ndash;&gt;-->
+                            <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
+                            <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
+                            <!--&lt;!&ndash;android:layout_marginLeft="@dimen/bottom_ellipsis_height"&ndash;&gt;-->
+                            <!--&lt;!&ndash;android:layout_marginTop="@dimen/default_padding_top"&ndash;&gt;-->
+                            <!--&lt;!&ndash;android:text="or" />&ndash;&gt;-->
 
                             <!--<TextView-->
-                            <!--android:id="@+id/orer"-->
-                            <!--android:layout_width="match_parent"-->
-                            <!--android:layout_height="wrap_content"-->
-                            <!--android:layout_marginLeft="@dimen/bottom_ellipsis_height"-->
-                            <!--android:layout_marginTop="@dimen/default_padding_top"-->
-                            <!--android:text="or" />-->
-
-                            <TextView
-                                android:id="@+id/xumbAnd"
-                                android:layout_width="347dp"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="@dimen/bottom_ellipsis_height"
-                                android:layout_marginTop="@dimen/default_padding_top"
-                                android:text="ցուցակ" />
+                                <!--android:id="@+id/xumbAnd"-->
+                                <!--android:layout_width="347dp"-->
+                                <!--android:layout_height="wrap_content"-->
+                                <!--android:layout_marginLeft="@dimen/bottom_ellipsis_height"-->
+                                <!--android:layout_marginTop="@dimen/default_padding_top"-->
+                                <!--android:text="ցուցակ" />-->
 
                             <TextView
                                 android:id="@+id/textView29"
@@ -246,18 +177,18 @@
 
                                 <ListView
                                     android:id="@+id/listDay"
-                                    android:layout_width="100dp"
-                                    android:layout_height="120dp" />
+                                    android:layout_width="98dp"
+                                    android:layout_height="95dp" />
 
                                 <ListView
                                     android:id="@+id/listStart"
                                     android:layout_width="60dp"
-                                    android:layout_height="120dp" />
+                                    android:layout_height="95dp" />
 
                                 <ListView
                                     android:id="@+id/listEnd"
                                     android:layout_width="60dp"
-                                    android:layout_height="120dp" />
+                                    android:layout_height="95dp" />
                             </LinearLayout>
 
                             <TextView
@@ -291,7 +222,54 @@
                         </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/xumb"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/bottom_ellipsis_height"
+                        android:layout_marginTop="@dimen/activity_vertical_margin"
+                        android:textColor="@color/colorAccent" />
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <ListView
+                            android:id="@+id/xumbStName"
+                            android:layout_width="72dp"
+                            android:layout_height="211dp" />
+
+                        <ListView
+                            android:id="@+id/xumbStSurname"
+                            android:layout_width="84dp"
+                            android:layout_height="211dp" />
+
+                    <ListView
+                        android:id="@+id/xumbStRating"
+                        android:layout_width="77dp"
+                        android:layout_height="211dp" />
+                    <ListView
+                        android:id="@+id/xumbStImg"
+                        android:layout_width="wrap_content"
+                        android:layout_height="211dp" />
+                    </LinearLayout>
+
+                    <!--<TextView-->
+                    <!--android:id="@+id/xumbAnd"-->
+                    <!--android:layout_width="347dp"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginLeft="@dimen/bottom_ellipsis_height"-->
+                    <!--android:layout_marginTop="@dimen/default_padding_top"-->
+                    <!--android:text="ցուցակ" />-->
+                </LinearLayout>
             </LinearLayout>
+
         </ScrollView>
 
     </android.support.v4.widget.NestedScrollView>
