--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -125,4 +125,15 @@
         android:textColor="@android:color/background_light"
         android:textSize="14sp"
         android:textStyle="bold" />
+
+    <Button
+        android:layout_width="231dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="20dp"
+        android:background="@color/colorAccent"
+        android:onClick="notCount"
+        android:text="count"
+        android:textColor="@android:color/background_light"
+        android:textSize="14sp"
+        android:textStyle="bold" />
 </LinearLayout>
