--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#8bc34a</color>
     <color name="colorPrimaryDark">#8bc34a</color>
     <color name="colorAccent">#8bc34a</color>
+    <color name="colornot">#ff0004</color>
 </resources>
