--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -236,6 +236,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="@dimen/bottom_ellipsis_height"
                         android:layout_marginTop="@dimen/activity_vertical_margin"
+                        android:layout_marginBottom="20dp"
                         android:textColor="@color/colorAccent" />
 
                     <LinearLayout
@@ -245,23 +246,23 @@
 
                         <ListView
                             android:id="@+id/xumbStName"
-                            android:layout_width="90dp"
-                            android:layout_height="wrap_content" />
+                            android:layout_width="match_parent"
+                            android:layout_height="310dp" />
 
-                        <ListView
-                            android:id="@+id/xumbStSurname"
-                            android:layout_width="112dp"
-                            android:layout_height="wrap_content" />
+                        <!--<ListView-->
+                        <!--android:id="@+id/xumbStSurname"-->
+                        <!--android:layout_width="112dp"-->
+                        <!--android:layout_height="wrap_content" />-->
 
-                        <ListView
-                            android:id="@+id/xumbStRating"
-                            android:layout_width="112dp"
-                            android:layout_height="wrap_content" />
+                        <!--<ListView-->
+                        <!--android:id="@+id/xumbStRating"-->
+                        <!--android:layout_width="112dp"-->
+                        <!--android:layout_height="wrap_content" />-->
 
-                        <ListView
-                            android:id="@+id/xumbStImg"
-                            android:layout_width="150dp"
-                            android:layout_height="wrap_content" />
+                        <!--<ListView-->
+                        <!--android:id="@+id/xumbStImg"-->
+                        <!--android:layout_width="150dp"-->
+                        <!--android:layout_height="wrap_content" />-->
                     </LinearLayout>
 
                 </LinearLayout>
@@ -296,10 +297,10 @@
                 </LinearLayout>
 
                 <!--<Button-->
-                    <!--android:id="@+id/notificationOne"-->
-                    <!--android:layout_width="fill_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:text="start notification one" />-->
+                <!--android:id="@+id/notificationOne"-->
+                <!--android:layout_width="fill_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="start notification one" />-->
             </LinearLayout>
 
         </ScrollView>
